    ** more accurate GET-INTERNAL-REAL-TIME.
    ** better RUN-PROGRAM behaviour in case of errors in the child
       process.
    ** PROBE-FILE now simplifies pathnames correctly.
    ** DIRECTORY now works correctly with :WILD-INFERIORS.
    ** DECODE-UNIVERSAL-TIME works on times before 00:00:00 January
       1st 1970 (although time timezone data will be unreliable).

changes in sbcl-0.9.18 (1.0.beta?) relative to sbcl-0.9.17:
  * enhancement: SB-POSIX now supports cfsetispeed(3), cfsetospeed(3),
    cfgetispeed(3), cfgetospeed(3), and related constants. (thanks to
    Max-Gerd Retzlaff)
  * bug fix: two potential GC deadlocks affecting threaded builds.
  * bug fix: (TYPEP #\A '(NOT (MEMBER #\" #\{ #\:))) now correctly
    returns T (reported by Anton Kazennikov)
  * bug fix: the STORE-VALUE restart of CHECK-TYPE works correctly
    with non-variable places
  * bug fix: remove a race condition in the setting of
    funcallable-instance functions, this should make threaded CLOS
    code more stable against memory faults.
  * bug fix: corruption of specials when unbinding is interrupted by an
    asynchronous unwind (reported by Hannu Koivisto)
  * improvement: the debugger will now also display local variables that
    are only used once, for code compiled with a DEBUG optimization quality
    of 2 or higher.

changes in sbcl-0.9.17 (0.9.99?) relative to sbcl-0.9.16:
  * feature: weak hash tables, see MAKE-HASH-TABLE documentation
  * incompatible change: External-format support for FFI calls.  The
    SB-ALIEN:C-STRING no longer implies an ASCII
    external-format. Instead the string is subject to external-format
    conversion. Additionally return values of type SB-ALIEN:C-STRING
    are by default of type (SIMPLE-ARRAY CHARACTER), not
    SIMPLE-BASE-STRING. For an alien type that behaves like the old
    SB-ALIEN:C-STRING type, use (SB-ALIEN:C-STRING :EXTERNAL-FORMAT
    :ASCII :ELEMENT-TYPE BASE-CHAR).  (thanks to Yaroslav Kavenchuk)